; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-date.c_main.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-date.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LOG_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"17:41\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"18:42:44\00", align 1
@.str.2 = private unnamed_addr constant [11 x i8] c"18:42:44.0\00", align 1
@.str.3 = private unnamed_addr constant [22 x i8] c"18:42:44.999999999999\00", align 1
@.str.4 = private unnamed_addr constant [18 x i8] c"12-10-02 12:13:14\00", align 1
@.str.5 = private unnamed_addr constant [17 x i8] c"12-10-2 12:13:14\00", align 1
@.str.6 = private unnamed_addr constant [15 x i8] c"12-10-03 12:13\00", align 1
@.str.7 = private unnamed_addr constant [17 x i8] c"2012-12-30 18:42\00", align 1
@.str.8 = private unnamed_addr constant [11 x i8] c"2012-10-02\00", align 1
@.str.9 = private unnamed_addr constant [15 x i8] c"Tue 2012-10-02\00", align 1
@.str.10 = private unnamed_addr constant [10 x i8] c"yesterday\00", align 1
@.str.11 = private unnamed_addr constant [6 x i8] c"today\00", align 1
@.str.12 = private unnamed_addr constant [9 x i8] c"tomorrow\00", align 1
@.str.13 = private unnamed_addr constant [10 x i8] c"16:20 UTC\00", align 1
@.str.14 = private unnamed_addr constant [17 x i8] c"16:20 Asia/Seoul\00", align 1
@.str.15 = private unnamed_addr constant [20 x i8] c"tomorrow Asia/Seoul\00", align 1
@.str.16 = private unnamed_addr constant [28 x i8] c"2012-12-30 18:42 Asia/Seoul\00", align 1
@.str.17 = private unnamed_addr constant [4 x i8] c"now\00", align 1
@.str.18 = private unnamed_addr constant [4 x i8] c"+2d\00", align 1
@.str.19 = private unnamed_addr constant [7 x i8] c"+2y 4d\00", align 1
@.str.20 = private unnamed_addr constant [12 x i8] c"5months ago\00", align 1
@.str.21 = private unnamed_addr constant [12 x i8] c"@1395716396\00", align 1
@.str.22 = private unnamed_addr constant [13 x i8] c"1970-1-1 UTC\00", align 1
@.str.23 = private unnamed_addr constant [22 x i8] c"1970-1-1 00:00:01 UTC\00", align 1
@.str.24 = private unnamed_addr constant [15 x i8] c"1969-12-31 UTC\00", align 1
@.str.25 = private unnamed_addr constant [6 x i8] c"-100y\00", align 1
@.str.26 = private unnamed_addr constant [14 x i8] c"today UTC UTC\00", align 1
@.str.27 = private unnamed_addr constant [15 x i8] c"now Asia/Seoul\00", align 1
@.str.28 = private unnamed_addr constant [15 x i8] c"+2d Asia/Seoul\00", align 1
@.str.29 = private unnamed_addr constant [23 x i8] c"@1395716396 Asia/Seoul\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = load i32, i32* @LOG_DEBUG, align 4
  %7 = call i32 @test_setup_logging(i32 %6)
  %8 = call i32 @test_one(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %9 = call i32 @test_one(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0))
  %10 = call i32 @test_one(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0))
  %11 = call i32 @test_one(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.3, i64 0, i64 0))
  %12 = call i32 @test_one(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.4, i64 0, i64 0))
  %13 = call i32 @test_one(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.5, i64 0, i64 0))
  %14 = call i32 @test_one(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.6, i64 0, i64 0))
  %15 = call i32 @test_one(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.7, i64 0, i64 0))
  %16 = call i32 @test_one(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.8, i64 0, i64 0))
  %17 = call i32 @test_one(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.9, i64 0, i64 0))
  %18 = call i32 @test_one(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.10, i64 0, i64 0))
  %19 = call i32 @test_one(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.11, i64 0, i64 0))
  %20 = call i32 @test_one(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.12, i64 0, i64 0))
  %21 = call i32 @test_one_noutc(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.13, i64 0, i64 0))
  %22 = call i32 @test_one_noutc(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.14, i64 0, i64 0))
  %23 = call i32 @test_one_noutc(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.15, i64 0, i64 0))
  %24 = call i32 @test_one_noutc(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.16, i64 0, i64 0))
  %25 = call i32 @test_one_noutc(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.17, i64 0, i64 0))
  %26 = call i32 @test_one_noutc(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.18, i64 0, i64 0))
  %27 = call i32 @test_one_noutc(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.19, i64 0, i64 0))
  %28 = call i32 @test_one_noutc(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.20, i64 0, i64 0))
  %29 = call i32 @test_one_noutc(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.21, i64 0, i64 0))
  %30 = call i32 @test_should_parse(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.22, i64 0, i64 0))
  %31 = call i32 @test_should_pass(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.23, i64 0, i64 0))
  %32 = call i32 @test_should_fail(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.24, i64 0, i64 0))
  %33 = call i32 @test_should_fail(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.25, i64 0, i64 0))
  %34 = call i32 @test_should_fail(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.26, i64 0, i64 0))
  %35 = call i32 @test_should_fail(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.27, i64 0, i64 0))
  %36 = call i32 @test_should_fail(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.28, i64 0, i64 0))
  %37 = call i32 @test_should_fail(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.29, i64 0, i64 0))
  ret i32 0
}

declare dso_local i32 @test_setup_logging(i32) #1

declare dso_local i32 @test_one(i8*) #1

declare dso_local i32 @test_one_noutc(i8*) #1

declare dso_local i32 @test_should_parse(i8*) #1

declare dso_local i32 @test_should_pass(i8*) #1

declare dso_local i32 @test_should_fail(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
